--- a/style.css
+++ b/style.css
@@ -500,6 +500,7 @@ h1 {
 .pres-gauche p {
   text-align: left;
   font-size: 19px;
+  line-height: 1.7;
 }
 .presentation-txt {
   font-weight: 700;
@@ -517,16 +518,16 @@ h1 {
   padding: 10px 0 50px 110px;
 }
 .liste-presentation span strong {
-  font-size: 26px;
+  font-size: 30px;
   font-weight: 700;
 }
 
 .chiffre-style {
-  font-family: "Abril FatFace", sans-serif;
-  font-family: 34px;
+  font-family: "Abril Fatface", sans-serif;
+  font-size: 34px;
 }
 .txt-liste {
-  font-size: 23px;
+  font-size: 24px;
   display: inline;
 }
 /* Medias Presentation */
@@ -663,7 +664,7 @@ h1 {
   content: "";
   height: 240px;
   width: 100px;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(243, 243, 243, 0.5);
   display: block;
   position: absolute;
   left: -150px;
@@ -671,8 +672,7 @@ h1 {
   transform: rotate(-45deg);
 }
 .btn-projets:hover::after {
-  background: linear-gradient(66deg, #00a3ff 0%, #00ffa3 80%);
-  transition: transform 0.3s 0.9s linear;
+  transition: transform 0.5s 0.9s linear;
   transform: translateX(400px);
 }
 
@@ -895,7 +895,7 @@ h1 {
   bottom: 0;
   z-index: 100;
   padding-left: 20px;
-  padding-bottom: 75px;
+  padding-bottom: 83px;
 }
 .container-btns button {
   padding: 9px 9px;
@@ -931,7 +931,7 @@ h1 {
   position: absolute;
   bottom: 0;
   background: #f1f1f1;
-  height: 130px;
+  height: 140px;
   width: 100%;
   z-index: -10;
 }
@@ -957,7 +957,7 @@ h1 {
 }
 .slide .txt-slide p {
   font-size: 16px;
-  padding: 10px;
+  padding: 13px;
   color: #333;
   font-weight: 600;
   position: absolute;
@@ -1003,6 +1003,12 @@ h1 {
     width: 800px;
     padding-left: 0px;
     padding-bottom: 0px;
+  }
+  .container-btns {
+    padding-bottom: 80px;
+  }
+  .txt-slide {
+    height: 130px;
   }
   .slide .txt-slide p {
     bottom: 4px;
@@ -1147,6 +1153,10 @@ h1 {
   opacity: 0.9;
   box-shadow: 0 0 10px rgba(24, 24, 24, 0.5);
 }
+.btn {
+  margin: 40px 0 45px 0;
+  text-align: center;
+}
 
 .btn img {
   width: 35px;
@@ -1154,11 +1164,8 @@ h1 {
 }
 
 .btn .btn-contact {
-  display: block;
-  width: auto;
-  margin: 0 auto;
   padding: 20px 60px;
-  border: 3px solid rgb(144, 144, 144);
+  border: 3px solid rgb(39, 39, 39);
   border-radius: 9999px;
   background-image: linear-gradient(
     to right,
@@ -1167,7 +1174,8 @@ h1 {
     #7598b6
   );
   background-size: 200%;
-  color: #333;
+  color: #000;
+  opacity: 0.9;
   font-size: 23px;
   font-weight: 600;
   cursor: pointer;
@@ -1184,7 +1192,6 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* padding-left: 300px; */
   margin-top: 25px;
 }
 .whatsapp img {
@@ -1232,6 +1239,14 @@ h1 {
 
   .contact-background {
     width: 100%;
+  }
+  .btn .btn-contact {
+    padding: 15px 45px;
+    font-size: 20px;
+  }
+  .btn-contact,
+  .logo-whatsapp span {
+    font-size: 19px;
   }
 }
 
