--- a/style.css
+++ b/style.css
@@ -426,7 +426,7 @@ h1 {
 }
 .fond-forme {
   background: #3492f0;
-  background-image: linear-gradient(to right, #29323c, #485563);
+  background-image: linear-gradient(to right, #242b33, #3d454e);
   width: 2300px;
   height: 1000px;
   position: absolute;
@@ -683,7 +683,7 @@ h1 {
   padding-bottom: 200px;
   border-bottom: 1px dashed #333;
   background: #485563;
-  background-image: linear-gradient(to right, #29323c, #485563);
+  background-image: linear-gradient(to right, #242b33, #3d454e);
   color: #f1f1f1;
   position: relative;
   z-index: -1;
@@ -805,7 +805,7 @@ h1 {
 }
 .head-slider p {
   max-width: 1100px;
-  min-width: 400px;
+  min-width: 320px;
   text-align: center;
   font-size: 20px;
   line-height: 1.8;
@@ -860,7 +860,7 @@ h1 {
 .container-btns {
   position: absolute;
   bottom: 0;
-  z-index: 100;
+  z-index: 1;
   padding-left: 20px;
   padding-bottom: 83px;
 }
@@ -1037,12 +1037,24 @@ h1 {
   .head-slider .titre-slider {
     font-size: 30px;
   }
+  .head-slider p {
+    font-size: 17px;
+    line-height: 1.7;
+  }
   .container-slider {
-    width: 370px;
+    width: 330px;
     padding: 2px 3px;
+  }
+  .counter {
+    right: 4px;
+  }
+  .slide h3 {
+    padding-top: 189px;
+    font-size: 21px;
   }
   .container-btns {
     left: 30%;
+    padding-bottom: 15px;
   }
 }
 
@@ -1193,7 +1205,7 @@ h1 {
   .btn .btn-contact {
     padding: 15px 55px;
     font-size: 21px;
-    border: 2px solid rgb(144, 144, 144);
+    border: 2px solid #333;
   }
   .contact-background {
     width: 90%;
