--- a/style.css
+++ b/style.css
@@ -1183,11 +1183,12 @@ h1 {
   transition: all 0.3s ease-in-out;
 }
 
-.logo-whatsapp span {
+.logo-whatsapp a {
   position: relative;
   bottom: 14px;
   font-weight: 500;
   font-size: 21px;
+  color: #000;
 }
 
 @media screen and (max-width: 1300px) {
@@ -1227,7 +1228,7 @@ h1 {
     font-size: 20px;
   }
   .btn-contact,
-  .logo-whatsapp span {
+  .logo-whatsapp a {
     font-size: 19px;
   }
 }
