--- a/style.css
+++ b/style.css
@@ -671,6 +671,12 @@ h1 {
   .item {
     height: 380px;
   }
+  .item h3 {
+    font-size: 20px;
+  }
+  .item p {
+    font-size: 14px;
+  }
 }
 /* --------------------Section Range-------------------- */
 
@@ -1230,6 +1236,11 @@ h1 {
   .btn-contact,
   .logo-whatsapp a {
     font-size: 19px;
+  }
+}
+@media screen and (max-width: 335px) {
+  .btn .btn-contact {
+    font-size: 16px;
   }
 }
 
