--- a/style.css
+++ b/style.css
@@ -663,6 +663,9 @@ h1 {
   .item {
     height: 420px;
   }
+  .item h3 {
+    font-size: 20px;
+  }
   .cont-img-port {
     height: auto;
   }
@@ -672,10 +675,14 @@ h1 {
     height: 380px;
   }
   .item h3 {
-    font-size: 20px;
+    font-size: 18px;
   }
   .item p {
     font-size: 14px;
+  }
+  .btn-projets {
+    height: 45px;
+    line-height: 45px;
   }
 }
 /* --------------------Section Range-------------------- */
@@ -850,7 +857,6 @@ h1 {
   position: absolute;
   z-index: 150;
   top: -45px;
-  /* left: 50%; */
   right: 0;
   width: 40px;
   height: 40px;
@@ -1256,5 +1262,10 @@ footer {
 @media screen and (max-width: 1300px) {
   footer {
     padding-left: 0px;
+  }
+}
+@media screen and (max-width: 768px) {
+  footer {
+    font-size: 14px;
   }
 }
