--- a/style.css
+++ b/style.css
@@ -449,21 +449,21 @@ h1 {
   padding-left: 300px;
 }
 .pres-gauche {
-  width: 600px;
+  width: 610px;
   flex-shrink: 0;
-  padding-bottom: 30px;
   padding-left: 120px;
   padding-top: 20px;
 }
 .pres-gauche h3 {
   text-align: center;
   font-size: 25px;
-  letter-spacing: 2px;
+  letter-spacing: 1px;
   margin-left: 20px;
+  margin-top: 20px;
 }
 .pres-gauche hr {
   width: 60px;
-  margin: 0 auto 20px auto;
+  margin: 1px auto 20px auto;
 }
 .pres-gauche p {
   text-align: left;
@@ -1137,6 +1137,10 @@ h1 {
   font-weight: 400;
   margin-bottom: 15px;
 }
+.section-contact h4 {
+  text-align: center;
+  font-weight: 500;
+}
 .section-contact a {
   text-decoration: none;
   color: #333;
@@ -1150,9 +1154,15 @@ h1 {
   opacity: 0.9;
   box-shadow: 0 0 10px rgba(24, 24, 24, 0.5);
 }
+.coordonnees {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
 .btn {
   margin: 40px 0 45px 0;
-  text-align: center;
 }
 
 .btn img {
@@ -1161,9 +1171,10 @@ h1 {
 }
 
 .btn .btn-contact {
-  padding: 20px 60px;
-  border: 3px solid rgb(39, 39, 39);
-  border-radius: 9999px;
+  padding: 20px 40px;
+  margin-right: 20px;
+  border: 2px solid rgb(39, 39, 39);
+  border-radius: 5px;
   background-image: linear-gradient(
     to right,
     transparent 50%,
@@ -1181,29 +1192,57 @@ h1 {
 .btn .btn-contact:hover {
   color: #fff;
   background-position: 100%;
-  border: 3px solid #fff;
+  border: 2px solid #fff;
   transform: scale(0.95);
   font-weight: 700;
 }
-.whatsapp {
+
+.whatsapp img {
+  width: 80px;
+  height: 80px;
+  transition: 0.3s ease-in-out;
+}
+
+.questionnaire {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-top: 25px;
-}
-.whatsapp img {
-  width: 40px;
-  height: 40px;
-  margin-right: 15px;
-  transition: all 0.3s ease-in-out;
+  margin-top: 5px;
 }
 
-.logo-whatsapp a {
-  position: relative;
-  bottom: 14px;
-  font-weight: 500;
-  font-size: 21px;
-  color: #000;
+.questionnaire img {
+  width: 100px;
+  height: 80px;
+  margin-right: 5px;
+  filter: drop-shadow(0 0.1vw 0.3vw #66f513) drop-shadow(0 0.1vw 0.3vw #3b9e65);
+  animation: arrow-blink 2s infinite alternate;
+}
+.questionnaire a {
+  font-size: 20px;
+  color: #000 !important;
+  font-weight: bolder;
+  transition: 0.2s ease-in-out;
+}
+.questionnaire a:hover {
+  transform: scale(0.95);
+}
+@keyframes arrow-blink {
+  0%,
+  9%,
+  15%,
+  79%,
+  83%,
+  100% {
+    filter: drop-shadow(0 0.1vw 0.3vw #66f513)
+      drop-shadow(0 0.1vw 0.3vw #3b9e65);
+  }
+
+  10%,
+  14%,
+  80%,
+  82% {
+    filter: none;
+  }
 }
 
 @media screen and (max-width: 1300px) {
@@ -1229,6 +1268,10 @@ h1 {
   .contact-background {
     width: 90%;
   }
+  .whatsapp img {
+    width: 65px;
+    height: 65px;
+  }
 }
 @media screen and (max-width: 500px) {
   .section-contact h2 {
@@ -1242,14 +1285,25 @@ h1 {
     padding: 15px 45px;
     font-size: 20px;
   }
-  .btn-contact,
-  .logo-whatsapp a {
-    font-size: 19px;
+  .coordonnees {
+    flex-wrap: wrap;
+    margin-top: 3px;
+  }
+  .whatsapp img {
+    width: 55px;
+    height: 55px;
   }
 }
-@media screen and (max-width: 335px) {
+@media screen and (max-width: 365px) {
   .btn .btn-contact {
     font-size: 16px;
+    padding: 20px 30px;
+  }
+  .questionnaire img {
+    margin-right: 0;
+  }
+  .questionnaire a {
+    font-size: 18px;
   }
 }
 
