--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ body {
   font-family: "Poppins", sans-serif;
   background: #f1f1f1;
 }
+:root {
+  --first-color: linear-gradient(to bottom, rgb(52, 146, 240), #7598b6);
+}
 /* --------------------Scroll up-------------------- */
 .scrollup {
   position: fixed;
@@ -19,7 +22,7 @@ body {
   bottom: -20%;
   display: flex;
   text-decoration: none;
-  background: linear-gradient(to bottom, rgb(52, 146, 240), #7598b6);
+  background: var(--first-color);
   border-radius: 100px;
   padding: 0.45rem;
   opacity: 9;
@@ -625,7 +628,7 @@ h1 {
 .cont-projets {
   width: 100%;
   height: auto;
-  margin: 0 auto 100px auto;
+  margin: 0 auto 70px auto;
   padding-left: 300px;
   display: flex;
   flex-wrap: wrap;
@@ -734,6 +737,120 @@ h1 {
   .btn-projets {
     height: 45px;
     line-height: 45px;
+  }
+}
+/* --------------------Section Swiper Projets Client----------------- */
+/*=============== NEW ===============*/
+.container {
+  max-width: 920px;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  padding-left: 300px;
+}
+.section__title {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 35px;
+}
+@media screen and (min-width: 992px) {
+  .container {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+.new__card {
+  position: relative;
+  width: 400px;
+  height: 100%;
+  background-color: whitesmoke;
+  box-shadow: 0 4px 16px hsla(355, 25%, 15%, 0.1);
+  padding: 2px;
+  border-radius: 4px;
+  text-align: center;
+  margin-bottom: 4.4rem;
+  overflow: hidden;
+}
+
+.overlay {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 0%;
+  background: var(--first-color);
+  opacity: 0.9;
+  overflow: hidden;
+  transition: 0.8s;
+}
+.overlay a {
+  color: white;
+  font-size: 19px;
+  letter-spacing: 1px;
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-weight: bolder;
+  text-align: center;
+  text-decoration: none;
+}
+.overlay .para-swiper {
+  color: white;
+  font-size: 18px;
+  letter-spacing: 1px;
+  font-weight: bolder;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  text-decoration: none;
+  line-height: 1.6;
+  width: 85%;
+}
+.swiper-projet:hover .overlay {
+  height: 100%;
+}
+
+.new__img {
+  object-fit: cover;
+  width: 100%;
+  transition: 0.3s;
+}
+.new__card:hover .new__img {
+  transform: scale(1.05);
+}
+
+/*Class Swiper*/
+
+.swiper-pagination {
+  margin-bottom: 15px;
+}
+.swiper-pagination-bullet {
+  background: rgb(52, 146, 240);
+}
+
+.swiper-pagination-bullet-active {
+  background: #7598b6;
+}
+@media screen and (max-width: 1300px) {
+  .container {
+    padding-left: 0px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .overlay .para-swiper {
+    font-size: 16px;
+  }
+}
+@media screen and (max-width: 400px) {
+  .container {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
+  .overlay .para-swiper {
+    width: 70%;
   }
 }
 /* --------------------Section Range-------------------- */
